--- a/testtestsson.ipynb
+++ b/testtestsson.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPi2oaQOmojyM7ILWa6b/45",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
         "id": "yvUg5svNVoUn"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd"
+      ]
     }
   ]
 }
