Skapad med Colaboratory

--- a/testtestsson.ipynb
+++ b/testtestsson.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +33,17 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_L3uQLQMaW1I"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
