--- a/testtestsson.ipynb
+++ b/testtestsson.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,17 +34,9 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n"
+        "import pandas as pd\n",
+        "import"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_L3uQLQMaW1I"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
